fixed response fetching
